--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Document</title>
 </head>
 <body>
-	
+	<header><h2>Hello World</h2></header>
+	<section><p>I am zequanli</p></section>
+	<footer><h3>Welcome to us</h3></footer>
 </body>
 </html>
